docs/reference/etamil.ebnf
(* The eTamil grammar. Generated by scripts/generate_ebnf.mjs from
   tree-sitter-etamil/grammar.js; do not edit by hand.

   Notation: ::= defines; | chooses; ( ) groups; ? optional; * zero or more; + one or more;
   "x" is the literal text x; /re/ is a regular expression; <Name> is a keyword token. *)

(* Syntax. A rule that reads a token and then another is separated by any amount of
   whitespace and comments. <Name> is a keyword; see KEYWORDS.md for its spellings. *)

source_file ::= statement*
statement ::= import_statement
            | function_definition
            | return_statement
            | if_statement
            | while_statement
            | for_each_statement
            | print_statement
            | input_statement
            | route_statement
            | response_statement
            | json_response_statement
            | every_statement
            | server_statement
            | file_statement
            | csv_statement
            | database_statement
            | shape_definition
            | declaration
            | typed_declaration
            | fixed_declaration
            | function_declaration
            | assignment
            | index_assignment
            | field_assignment
            | expression_statement
import_statement ::= <Import> string ";"
function_definition ::= <Function> identifier parameter_list return_type? block
return_type ::= type | function_type | identifier
function_type ::= <Function>
parameter_list ::= "(" (parameter ("," parameter)*)? ")"
parameter ::= identifier
            | (type | function_type) identifier
            | identifier identifier
            | identifier (type | function_type | identifier) identifier
shape_definition ::= identifier identifier "{" (shape_field ","? | function_definition)* "}"
shape_field ::= (type | function_type | identifier)? identifier
return_statement ::= <Return> expression? ";"
if_statement ::= "(" expression ")" <If> block (<Else> block)?
while_statement ::= "(" expression ")" <Loop> block
for_each_statement ::= <ForEach> identifier <In> expression block
print_statement ::= <Print> expression ";"
input_statement ::= <Input> expression ";"
route_statement ::= <Route> http_method "," string block
http_method ::= <HttpGet>
              | <HttpPost>
              | <HttpPut>
              | <HttpDelete>
              | <HttpPatch>
              | <HttpOptions>
              | <HttpHead>
response_statement ::= <Response> expression "," expression ("," expression)? ";"
json_response_statement ::= <JSONBody> expression ("," expression)? ";"
every_statement ::= <Every> expression block
server_statement ::= <StartServer> expression "," expression ";" | <StopServer> ";"
file_statement ::= <FileOpen> expression ("," expression)? ";"
                 | <FileClose> expression ";"
                 | <FileRead> expression "," identifier ";"
                 | <FileWrite> expression "," expression ";"
csv_statement ::= <ReadCSV> expression "," identifier ";"
                | <WriteCSV> expression "," expression ";"
database_backend ::= <SQLite>
                   | <PostgreSQL>
                   | <MySQL>
                   | <MongoDB>
                   | <Redis>
                   | <JSONdb>
                   | <SQL>
                   | <NoSQL>
database_statement ::= <DBConnect> database_backend "," expression ";"
                     | <DBDisconnect> database_backend ";"
                     | <DBQuery> expression "," expression "," identifier ";"
                     | <DBExecute> expression "," expression ";"
declaration ::= type identifier ("=" expression)? ";"
typed_declaration ::= identifier identifier ("=" expression)? ";"
fixed_declaration ::= identifier (type | function_type | identifier) identifier "=" expression
                        ";"
function_declaration ::= <Function> identifier "=" expression ";"
assignment ::= identifier "=" expression ";"
index_assignment ::= identifier "[" expression "]" "=" expression ";"
field_assignment ::= identifier "." identifier "=" expression ";"
expression_statement ::= expression ";"
block ::= "{" statement* "}"
type ::= <IntegerType>
       | <FloatType>
       | <StringType>
       | <BoolType>
       | <TextType>
       | <ArrayType>
       | <DataType>
       | <ObjectType>
       | <DateType>
expression ::= logical_expression
             | unary_not
             | comparison_expression
             | binary_expression
             | unary_minus
             | postfix
logical_expression ::= expression <Or> expression | expression <And> expression
unary_not ::= <Not> expression
comparison_expression ::= expression ("==" | "!=" | "<=" | ">=" | "<" | ">") expression
binary_expression ::= expression ("+" | "-" | "&") expression
                    | expression ("*" | "/") expression
unary_minus ::= "-" expression
postfix ::= call | index | field_access | try_expression | primary
call ::= postfix argument_list
argument_list ::= "(" (expression ("," expression)*)? ")"
index ::= postfix "[" expression "]"
field_access ::= postfix "." identifier
try_expression ::= postfix "?"
primary ::= parenthesized_expression
          | lambda
          | shape_literal
          | array
          | record
          | string
          | percentage
          | number
          | boolean
          | null
          | identifier
parenthesized_expression ::= "(" expression ")"
array ::= "[" (expression ("," expression)*)? "]"
record ::= "{" (pair ("," pair)*)? "}"
lambda ::= <Function> parameter_list return_type? block
shape_literal ::= identifier "{" (pair ("," pair)* ("," spread)? | spread)? ","? "}"
spread ::= ".." expression
pair ::= (identifier | string) ":" expression
boolean ::= <True> | <False>
null ::= <Null>

(* Lexical. Inside these there is no whitespace unless written. A name is stored exactly
   as typed, so a spelling in Tamil and one in Latin letters are different names. *)

comment ::= "//" /[^\n]*/
percentage ::= /[0-9]+/ ("." /[0-9]+/)? "%"
number ::= /[0-9]+/ ("." /[0-9]+/)?
string ::= '"' (escape_sequence | invalid_escape | /[^"\\]+/)* '"'
escape_sequence ::= /\\[ntr"\\]/
invalid_escape ::= /\\[^ntr"\\]/
identifier ::= /[a-zA-Z_\u0B80-\u0BFF][a-zA-Z0-9_\u0B80-\u0BFF]*/
